שמירת התמונה של מדבקת התרופה

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
 <!-- <app-hand-writ-reminder></app-hand-writ-reminder> -->
 <!-- <app-details-medicine-take></app-details-medicine-take> -->
 <!-- <app-activity-reminders></app-activity-reminders> -->
-<app-search-medicine></app-search-medicine>
+<!-- <app-search-medicine></app-search-medicine> -->
+<!-- <app-upload></app-upload> -->
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
