--- a/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
+++ b/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
@@ -8,10 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<!-- <div style="border-radius:50px; width: 15px; height: 15px; background-color: white; border-style: unset; border-color: orangered; "></div> -->
 <span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
-
-
 
 <div  style="width: 300px;  "class="example-button-row" >
     <div style="  width:550px; margin: auto; margin-left: 500px; margin-top: 100px; ">
@@ -19,12 +16,9 @@
         <div  style=" margin-left:135px; margin-top: 150px;"  class="form__group field">
             <input style="width: 250px; text-align: right; " type="text" class="form__field" placeholder="שם תזכורת" name="ReminderName" id='reminderName' required />
             <label style="color: white; margin-left: 180px;  " for="reminderName" class="form__label">שם תזכורת</label>
-        </div>
+        </div><br> <br> <br> <br>
         
-        <br> <br> <br> <br>
-
           <!-- ליצור פור שלפי התדירות ביום יפתח ההתראות -->
-    
         <div style="margin-left:135px;" class="form__group field">
             <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
             <label style="color: white; margin-left: 190px;  " for="alarm‏" class="form__label">1 התראה</label>
@@ -41,5 +35,5 @@
         </div>
         
     </div>
-    </div>
+</div>
     
