--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -1,39 +1,17 @@
-‏
-  
- <!-- <div class="col-sm-12" style=" height: 750px;  background-color: rgb(1,2,47); "> -->
-        <!-- <div style="  width:550px; height: 720px; margin: auto; border: 1px solid rgba(217, 226, 236, 0.877); display: flex; align-items: center; justify-content: center; background-color: rgba(14, 14, 71, 1); "> -->
+<div class="login"  style="margin-top: 100px;">    
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <form method="post">  
+        <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+        type="text" name="u" placeholder="שם משתמש" required="required" /><br><br>
 
-           
-        <div class="login"  style="margin-top: 100px;">    
-            <br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <form method="post">  
-                <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
-                type="text" name="u" placeholder="שם משתמש" required="required" /><br><br>
+        <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;"
+        type="text" name="u" placeholder="סיסמה " required="required" /><br><br>
 
-                <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;"
-                  type="text" name="u" placeholder="סיסמה " required="required" /><br><br>
+        <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+        type="submit">Google התחברות באמצעות </button> <br><br>
 
-                  <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
-                  type="submit">Google התחברות באמצעות </button> <br><br>
-
-                  <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
-                  type="submit">התחברות </button> 
-            
-              
-                <br>
-          
+        <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+        type="submit">התחברות </button> <br>       
+    </form>
+</div>
                
-                <!-- <button  type="submit" class="btn btn-primary btn-block btn-large" >Log in</button> 
-                   </form> 
-            </form>
-
-            
-            <a class="google btn" (click)="signIn()">
-                <i class="fa fa-google fa-fw"  ></i> Login with Google+
-            </a>
-        </div> -->
-        <!-- </div> -->
-        
- <!-- </div> -->
-
- <!-- <input type="password" class="form-control" id="pwd" name="password" size="15px">  -->
