--- a/src/app/components/search-medicine/search-medicine.component.html
+++ b/src/app/components/search-medicine/search-medicine.component.html
@@ -8,93 +8,88 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<!-- <div style="border-radius:50px; width: 15px; height: 15px; background-color: white; border-style: unset; border-color: orangered; "></div> -->
 <span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
-
 
 <div style=" width: 300px;  ">
     <div style="  width:550px; margin-left: 500px; margin-top: 100px;">
+      <div style="margin-left: 60px;"  class="search-box">
+        <button class="btn-search"><i style="font-size: 25px;" class="glyphicon glyphicon-search"></i></button>
+        <input style="  text-align: center;" type="text" class="input-search" placeholder="חיפוש תרופה">
+      </div>
+      <body>
+        <section>
+          <div class="tbl-header">
+            <table cellpadding="0" cellspacing="0">
+              <thead>
+                <tr>
+                  <th>תאריך תפוגה</th>
+                  <th>תאריך כניסה למאגר</th>
+                  <th>שם תרופה</th>
+                </tr>
+              </thead>
+            </table>
+          </div>
+          <div class="tbl-content">
+            <table cellpadding="0" cellspacing="0">
+              <tbody>
+                <tr>
+                  <td>12/10/2020</td>
+                  <td>12/15/2018</td>
+                  <td>Jakarta<div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
+                </tr>
+                <tr>
+                  <td>14/15/2025</td>
+                  <td>17/02/2021</td>
+                  <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
 
-      <span style="margin-left: 60px; color: white; font-size: 25px;" class="glyphicon glyphicon-search"></span>
-<body>
+                </tr>
+                <tr>
+                  <td>12/12/2021</td>
+                  <td>06/05/2021</td>
+                  <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
 
-<section>
-  <div class="tbl-header">
-    <table cellpadding="0" cellspacing="0">
-      <thead>
-        <tr>
-          <th>תאריך תפוגה</th>
-          <th>תאריך כניסה למאגר</th>
-          <th>שם תרופה</th>
-        </tr>
-      </thead>
-    </table>
-  </div>
-  <div class="tbl-content">
-    <table cellpadding="0" cellspacing="0">
-      <tbody>
-        <tr>
-          <td>12/10/2020</td>
-          <td>12/15/2018</td>
-          <td>Jakarta<div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
-        </tr>
-        <tr>
-          <td>14/15/2025</td>
-          <td>17/02/2021</td>
-          <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
-
-        </tr>
-        <tr>
-          <td>12/12/2021</td>
-          <td>06/05/2021</td>
-          <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
-
-        </tr>
-        <tr>
-          <td>17/08/2022</td>
-          <td>05/12/2021</td>
-          <td>Lampung <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
-         
-        </tr>
-        <tr>
-          <td>02/01/2018</td>
-          <td>03/09/2017</td>
-          <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
-      
-        </tr>
-        <tr>
-          <td>30/05/2023</td>
-          <td>12/06/2021</td>
-          <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
-     
-        </tr>
-        <tr>
-          <td>18/06/2019</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
-   
-        </tr>
-        <tr>
-          <td>30/12/2021</td>
-          <td>02/08/2021</td>
-          <td>Lampung <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
-       
-        </tr>
-        <tr>
-          <td>09/07/2022</td>
-          <td>05/02/2021</td>
-          <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
-      
-        </tr>
- 
-       
- 
-
-      </tbody>
-    </table>
-  </div>
-</section>
-</body>
+                </tr>
+                <tr>
+                  <td>17/08/2022</td>
+                  <td>05/12/2021</td>
+                  <td>Lampung <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
+                
+                </tr>
+                <tr>
+                  <td>02/01/2018</td>
+                  <td>03/09/2017</td>
+                  <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
+              
+                </tr>
+                <tr>
+                  <td>30/05/2023</td>
+                  <td>12/06/2021</td>
+                  <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
+            
+                </tr>
+                <tr>
+                  <td>18/06/2019</td>
+                  <td>Wibowo</td>
+                  <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
+          
+                </tr>
+                <tr>
+                  <td>30/12/2021</td>
+                  <td>02/08/2021</td>
+                  <td>Lampung <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
+              
+                </tr>
+                <tr>
+                  <td>09/07/2022</td>
+                  <td>05/02/2021</td>
+                  <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
+              
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+      </body>
 
 <div >
     <div style="margin-left: 75px; height: 3px; width: 120px; background-color: orange;">
@@ -108,9 +103,7 @@
   </div>
 </div>
 
-
-
-</div>
+  </div>
 </div>
 
 
