--- a/src/app/components/search-medicine/search-medicine.component.html
+++ b/src/app/components/search-medicine/search-medicine.component.html
@@ -32,18 +32,18 @@
           <div class="tbl-content">
             <table cellpadding="0" cellspacing="0">
               <tbody>
-                <tr>
-                  <td>12/10/2020</td>
-                  <td>12/15/2018</td>
-                  <td>Jakarta<div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
+                 <tr *ngFor="let item of lmedicine">
+                   <td >{{item.nameMedicine}}</td>
+                 <!-- <td>12/15/2018</td>
+                  <td>Jakarta<div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td> -->
                 </tr>
-                <tr>
+                <!-- <tr>
                   <td>14/15/2025</td>
                   <td>17/02/2021</td>
                   <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
 
-                </tr>
-                <tr>
+                </tr>  -->
+                <!-- <tr>
                   <td>12/12/2021</td>
                   <td>06/05/2021</td>
                   <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
@@ -84,7 +84,7 @@
                   <td>05/02/2021</td>
                   <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
               
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
