finish build of the reminders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
 <!-- <app-sign-up></app-sign-up> -->
 <!-- <app-scanne-page></app-scanne-page> -->
 <!-- <app-hand-writ-medicine></app-hand-writ-medicine> -->
-<!-- <app-hand-writ-reminder></app-hand-writ-reminder> -->
-<!-- <app-details-medicine-take></app-details-medicine-take> -->
+<!-- <app-hand-writ-reminder></app-hand-writ-reminder>
+<app-details-medicine-take></app-details-medicine-take> -->
 <!-- <app-activity-reminders></app-activity-reminders> -->
 <!-- <app-search-medicine></app-search-medicine> -->
 
