many difrent cahnges

--- a/src/app/components/activity-reminders/activity-reminders.component.css
+++ b/src/app/components/activity-reminders/activity-reminders.component.css
@@ -29,6 +29,7 @@
     width:100%;
     table-layout: fixed;
     font-family: 'Varela Round';
+ 
   }
 
   .tbl-header{
@@ -43,6 +44,7 @@
     overflow-x:auto;
     margin-top: 0px;
     border: 1px solid rgba(255,255,255,0.3);
+   
  
   }
 
@@ -50,10 +52,10 @@
     padding: 15px;
     text-align: center;
     font-weight: 500;
-    font-size: 13px;
+   /* font-size: 13px; */
     color: #fff;
     text-transform: uppercase;
- 
+    font-size: 18px;
   }
   
   td{
@@ -61,7 +63,7 @@
     text-align: center;
     vertical-align:middle;
     font-weight: 300;
-    font-size: 12px;
+    font-size: 15px;
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.1);
     
