--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -10,14 +10,15 @@
   
 
 
-<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
-  
-<div style=" width: 300px;  ">
-  <div style="  width:550px; margin-left: 500px; margin-top: 200px;"> 
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> 
+<br><br><br><br><br><br>
+<div style="color: white;text-align: center; font-size:50px;  font-family: 'Calibri';" >תיזכורות פעילות</div>
+<div style=" width: 300px; ">
+  <div style=" font-family: 'Calibri'; width:550px; margin-left: 500px; margin-top:100px ;"> 
     <body>
     <section>
       <div class="tbl-header">
-        <table cellpadding="0" cellspacing="0">
+        <table style=" font-size: 50px;" cellpadding="0" cellspacing="0" >
           <thead>
             <tr>
               <th>פירוט</th>
@@ -36,8 +37,8 @@
             <tr>
               <td>1</td>
               <td>
-                <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+                <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+                <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
               </td>
               <td>2</td>
               <td>16:15</td>
@@ -46,8 +47,8 @@
             <tr>
               <td>2</td>
               <td>
-                <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+                <span style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+                <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
               </td>
               <td>5</td>
               <td>18:00</td>
@@ -63,61 +64,7 @@
               <td>16:45</td>
               <td>Acamol</td>
             </tr>
-            <tr>
-              <td>4</td>
-              <td>
-                <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
-              </td>
-              <td>7</td>
-              <td>9:00</td>
-              <td>Acamol</td>
-            </tr>
-            <tr>
-              <td>5</td>
-              <td>
-                <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
-              </td>
-              <td>4</td>
-              <td>12:30</td>
-              <td>Acamol</td>
-            </tr>
-            <tr>
-              <td>6</td>
-              <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-              <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-              <td>9</td>
-              <td>082154325</td>
-            </tr>
-            <tr>
-              <td>7</td>
-              <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-              <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-              <td>3</td>
-              <td>078546521</td>
-            </tr>
-            <tr>
-              <td>8</td>
-              <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-              <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-              <td>1</td>
-              <td>024584544</td>
-            </tr>
-            <tr>
-              <td>9</td>
-              <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-              <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-              <td>6</td>
-              <td>081231544</td>
-            </tr>
-            <tr>
-              <td>10</td>
-              <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-              <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-              <td>4</td>
-              <td>082154325</td>
-            </tr>
+          
           
           </tbody>
         </table>
