--- a/src/app/components/scanne-page/scanne-page.component.css
+++ b/src/app/components/scanne-page/scanne-page.component.css
@@ -13,7 +13,7 @@
     height: 50px; 
     padding: 10px 20px;  
     background-color: white; 
-    font-family: 'Varela Round'; 
+    font-family: 'Calibri'; 
     font-size: 20px; 
     text-align: center;
     border-radius: 100px; 
