--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -2,22 +2,35 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>‏
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 
   <div  style=" height: 730px; widows: 300px;  "class="example-button-row" >
   
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     
-    <div style="color: white;text-align: center; font-size: 25px;  font-family: 'Varela Round'; " >ברוך הבא ל</div>
-    <div style="color: white;text-align: center; font-size: 25px; font-family: 'Varela Round';" > MEDISCAN</div>
+    <div style="color: white;text-align: center; font-size: 50px;  font-family: 'Calibri'; " >משתמש חדש </div><br><br><br>
+    <!-- <div style="color: white;text-align: center; font-size: 25px; font-family: 'Varela Round';" > MEDISCAN</div><br><br><br> -->
     
-    <button style="margin-top: 100px; margin-left: 700px; padding: 10px 20px; border-radius: 100px; width: 150px;" type="button" class="btn">
-      <div style="font-size: 15px; font-family: 'Varela Round'; ">להתחלת הפעילות</div>
+    <form method="post">  
+      
+      <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+        type="text" name="u" placeholder="שם " required="required"  [(ngModel)]=" userserve.currentuser.fname"/><br><br>
 
+    <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+      type="text" name="u" placeholder="כתובת מייל" required="required"  [(ngModel)]=" userserve.currentuser.gmail"/><br><br>
+
+      <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;"
+      type="password" name="u" placeholder="סיסמה " required="required" [(ngModel)]=" userserve.currentuser.pass" /><br><br>
+    </form > 
+    <!-- <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+    type="submit" >הרשמה והתחלת פעילות  </button> <br>     -->
+    <button (click)="userserve.SignUp()" style="margin-top: 100px; margin-left: 700px; padding: 10px 20px; border-radius: 100px; width: 150px;" type="button" class="btn">
+      <div style="font-size: 15px; font-family: 'Varela Round'; ">להרשמה</div>
     </button><br><br>
+   
     <span class="glyphicon glyphicon-bell" style="color: white; font-size:36px; margin-left: 757px; ">  </span><br>
-    <span  matBadge="1" matBadgeOverlap="false"  style=" margin-left: 787px;"></span>‏
+    <span  matBadge="1" matBadgeOverlap="false"  style=" margin-left: 787px;"></span>
   </div>
 
 
