--- a/src/app/components/scanne-page/scanne-page.component.html
+++ b/src/app/components/scanne-page/scanne-page.component.html
@@ -7,23 +7,24 @@
 <span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
 
 
-<div style="margin-top: 190px; margin-left: 715px; font-size:15px; font-family: 'Varela Round'; font-size: 35px; color: white;">!הי חדוה</div>
+<div style="margin-top: 190px; margin-left: 715px; font-size:15px;  font-family: 'Calibri';; font-size: 35px; color: white;"> היי {{this.userserve.currentuser.fname}}</div>
 
 <div style="margin-top: 75px; margin-left: 650px;"   > 
-  <input type="file" name = "file" id = "file"  class = "inputfile" (change)="upload($event.target.files)" accept="image/*" class="custom-file-input" >
+  <input type="file" name = "file" id = "file"  class = "inputfile" (change)="upload($event.target.files)" 
+  accept="image/*" class="custom-file-input" >
 </div><br>
 
-    <!-- <button style="margin-top: 75px; margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; width: 250px ; background-color: white; font-family: 'Varela Round'; font-size: 12px; text-align: center;" type="button" class="btn" >
+    <!-- <button style="margin-top: 75px; margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; width: 250px ; background-color: white;  font-family: 'Calibri';; font-size: 12px; text-align: center;" type="button" class="btn" >
       <div style="font-size: 22px;"> <span class="glyphicon glyphicon-picture" style=" font-size:26px; "> </span> קליטת חפיסה</div>
       </button><br><br> -->
 
-<button routerLink="/handWritMedicine" style=" margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; background-color: white; font-family: 'Varela Round'; font-size: 12px; text-align: center;" type="button" class="btn">
+<button routerLink="/handWritMedicine" style=" margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; background-color: white;  font-family: 'Calibri';; font-size: 12px; text-align: center;" type="button" class="btn">
   <div style="font-size: 20px;">
         <!-- <span class="glyphicon glyphicon-pencil" style=" font-size:26px;  "></span>   -->  
         קליטה ללא מרשם</div>  
 </button><br><br>
 
-<button routerLink="/searchMedicine" style=" margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; background-color: white; font-family: 'Varela Round'; font-size: 12px; text-align: center; " type="button" class="btn"  >  
+<button routerLink="/searchMedicine" style=" margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; background-color: white;  font-family: 'Calibri'; font-size: 12px; text-align: center; " type="button" class="btn"  >  
   <div style="font-size: 20px;"> 
         <!-- <span class="glyphicon glyphicon-search" style=" font-size:26px; "> </span> -->  
         חיפוש תרופה</div> 
